fluxcd/apps/base/syncthing/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing
  annotations:
    linkerd.io/inject: enabled
