fluxcd/apps/base/syncthing/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: syncthing
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - port: 22000
      protocol: TCP
    - port: 21027
      protocol: UDP
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 100.64.0.0/10
        - 169.254.0.0/16
        - ${KUBE_API_CIDR}
  - to:
    - ipBlock:
        cidr: 10.0.0.0/8
        except:
        - 10.42.0.0/16
        - 10.43.0.0/16
    - ipBlock:
        cidr: 172.16.0.0/12
    - ipBlock:
        cidr: 192.168.0.0/16
    ports:
    - port: 22000
      protocol: TCP
    - port: 22000
      protocol: UDP
